Avoid page shift

--- a/website/src/styles/main.scss
+++ b/website/src/styles/main.scss
@@ -1,5 +1,9 @@
 @import "bootstrap";
 
+html {
+  overflow-y: scroll;
+}
+
 .clickable {
   cursor: pointer
 }
